--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "mumbaiBuyTicketFixedLotteryMultichain": "npx hardhat compile && npx hardhat run scripts/buyTicketsFixedLotteryMultichain.ts --network polygonMumbai"
     },
     "devDependencies": {
+        "@chainlink/contracts-ccip": "^0.7.6",
         "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
         "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
         "@nomiclabs/hardhat-ethers": "^2.1.1",
