--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,8 @@
 PRIVATE_KEY=
 ALCHEMY_MAINNET=
 ALCHEMY_GOERLI=
+ALCHEMY_SEPOLIA=
+FUJI=
 ETHERSCAN_API_KEY=
 REPORT_GAS=false
 CMC= # coinmarketcap key
